--- a/src/index.html
+++ b/src/index.html
@@ -82,22 +82,43 @@
 
   <!-- New Character Selection Panel -->
   <div id="characterSelectionPanel">
-    <h2>Select Characters</h2>
+    <h2>Characters</h2>
+    <!-- Move presets above both columns -->
     <div id="classCategories" class="filterContainer">
       <!-- Preset buttons will be added here dynamically by the JavaScript -->
     </div>
-    <div id="characterSelector">
-      <!-- Characters will be inserted here dynamically -->
-    </div>
-    <div id="characterInfo">
-      <div id="selectedCharacterDetails">
-        <h3>Selected Character</h3>
-        <div id="characterDetailsContent">Select a character to see details</div>
+    <div id="characterSelectionContent">
+      <!-- Left column: Character Info -->
+      <div id="characterSelectionLeft">
+        <div id="characterInfo">
+          <!-- Selected Character Details -->
+          <div class="character-section">
+            <div class="character-section-header character-details-header">
+              Selected Character
+            </div>
+            <div class="character-section-content" id="characterDetailsContent">
+              Select a character to see details
+            </div>
+          </div>
+          
+          <!-- Selected Characters List -->
+          <div class="character-section">
+            <div class="character-section-header selected-pieces-header">
+              Selected Characters <span id="selectedCharactersCount" class="character-count">(0)</span>
+            </div>
+            <div class="character-section-content">
+              <div id="pieceSelectionContent"></div>
+              <button id="clearPieces">Clear All</button>
+            </div>
+          </div>
+        </div>
       </div>
-      <div id="pieceSelection">
-        <h3>Selected Characters</h3>
-        <div id="pieceSelectionContent"></div>
-        <button id="clearPieces">Clear All</button>
+      
+      <!-- Right column: Character Selector -->
+      <div id="characterSelectionRight">
+        <div id="characterSelector">
+          <!-- Characters will be inserted here dynamically -->
+        </div>
       </div>
     </div>
   </div>
